# Game_Of_Thrones_MultiAgent_Mcp_Gradio_App

./: README.md
crewai_gcp/: gradio_app.py  mcp_server.py  pyproject.toml  requirements.txt  streamlit_app.py
crewai_gcp/src/crewai_gcp/: crew.py  main.py
crewai_gcp/src/crewai_gcp/config/: agents.yaml  tasks.yaml
