[project]
name = "crewai_gcp"
version = "0.1.0"
description = "crewai_gcp using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "google-cloud-aiplatform>=1.101.0",
    "gradio>=5.35.0",
]

[project.scripts]
crewai_gcp = "crewai_gcp.main:run"
run_crew = "crewai_gcp.main:run"
train = "crewai_gcp.main:train"
replay = "crewai_gcp.main:replay"
test = "crewai_gcp.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
